upgrade pom